Fixed parameter names in dark mode

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 .container-side-by-side {
     display: flex;
     flex-wrap: wrap;
-}	
+}
 .credits {
     text-align: center;
     font-size: 12px;
@@ -67,12 +67,15 @@ body {
 button {
     float: right;
 }
+
 .svgcolor {
     filter: invert(0%) sepia(97%) saturate(0%) hue-rotate(34deg) brightness(89%) contrast(103%);
 }
-.svgcolor-dark-mode {
+
+body.dark-mode .svgcolor {
     filter: invert(100%) sepia(100%) saturate(0%) hue-rotate(201deg) brightness(106%) contrast(106%);
 }
+
 input[type="range"] {
     -webkit-appearance: none;
     background: #AAAAAA;
@@ -101,6 +104,7 @@ input[type="range"]::-moz-range-thumb {
     border-radius: 50%;
     pointer-events: auto;
 }
+
 @media (max-width: 700px) {
     .chart {
         width: 100%;
